Updated the wording around OSP tenant mapping.

--- a/common/openstack/tenant-mapping.adoc
+++ b/common/openstack/tenant-mapping.adoc
@@ -1,3 +1,3 @@
-When adding an OpenStack cloud or infrastructure provider, you can enable _tenant mapping_ in {product-title} to map any existing tenants from that provider. This means {product-title} will create new cloud tenants to match each of existing OpenStack tenants; each new cloud tenant and its corresponding OpenStack tenant will have identical user memberships, quotas, access/security rules, and resources assignments. 
+When adding an OpenStack cloud or infrastructure provider, you can enable _tenant mapping_ in {product-title} to map any existing tenants from that provider. This means {product-title} will create new cloud tenants to match each of existing OpenStack tenants; each new cloud tenant and its corresponding OpenStack tenant will have identical resources assignments. 
 
 During a provider refresh, {product-title} will also check for any changes to the tenant list in OpenStack. {product-title} will create new cloud tenants to match any new tenants, and delete any cloud tenants whose corresponding OpenStack tenants no longer exist. {product-title} will also replicate any changes to OpenStack tenants to their corresponding cloud tenants.
