--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/cloudformation_provisioning_via_services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/cloudformation_provisioning_via_services.adoc
@@ -1,24 +1,15 @@
-After creating your template, you can add it as a catalog item to the *Service Catalog*. *Stacks* can then be created from templates and launched from the *Service Catalog*.
+[appendix]
 
-[[adding-a-new-catalog]]
-=== Adding a New Catalog
+[[example-cloudformation-provisioning-via-services]]
+== Example: CloudFormation Provisioning via Services
 
-Use this procedure to add a new catalog using the dashboard UI.
-
-image:7149.png[Adding_a_New_Catalog]
-
-[arabic]
-. Navigate to menu:Services[Catalogs] and select *Catalogs* in the accordion menu.
-. Click image:1847.png[Configuration] *Configuration*, then click image:1848.png[Green_Plus_Sign] *Add a New Catalog*. The *Adding a new Catalog* window is displayed.
-. In *Basic Info*, add *Name* and *Description* for the new catalog.
-. You can assign catalog items in *Assign Catalog Item*.
-. Click *Add*.
+After creating your template, you can add it as a catalog item to the service catalog. Stacks can then be created from templates and launched from the service catalog.
 
 [[adding-a-new-service-dialog]]
-=== Adding a New Service Dialog
+=== Creating a Service Dialog
 
-Use this procedure to add a new service dialog based on the input parameters defined in the orchestration template.
-[arabic]
+Complete the following procedure to create a new service dialog based on the input parameters defined in the orchestration template.
+
 . Navigate to menu:Services[Catalogs] and click *Orchestration Templates* in the accordion menu.
 . From *All Orchestration Templates*, select the orchestration template you want to create a service dialog from.
 . Click image:1847.png[Configuration] *Configuration*, then click image:1848.png[Green_Plus_Sign] *Create Service Dialog* from *Orchestration Template*. The *Adding a new Service Dialog from Orchestration Template* window is displayed.
@@ -26,33 +17,48 @@ image:7156.png[Adding_a_new_Service_Dialog_from_Orchestration_Template]
 . In *Service Dialog Information*, add a *Service Dialog Name*.
 . Click *Save*.
 
-[[adding-a-new-catalog-item]]
-=== Adding a New Catalog Item
 
-Use this procedure to add a new service catalog item using the dashboard UI.
+[[adding-a-new-catalog]]
+=== Creating a Catalog
 
-[arabic]
+Complete the following procedure to create a new catalog.
+
+image:7149.png[Adding_a_New_Catalog]
+
+. Navigate to menu:Services[Catalogs] and select *Catalogs* in the accordion menu.
+. Click image:1847.png[Configuration] *Configuration*, then click image:1848.png[Green_Plus_Sign] *Add a New Catalog*. The *Adding a new Catalog* window is displayed.
+. In *Basic Info*, add *Name* and *Description* for the new catalog.
+. You can assign catalog items in *Assign Catalog Item*.
+. Click *Add*.
+
+
+[[adding-orchestration-catalog-item]]
+=== Creating an Orchestration Catalog Item
+
+Complete the following procedure to create a new orchestration catalog item.
+
 . Navigate to menu:Services[Catalogs] and select *Catalog Items* in the accordion menu.
 . Click image:1847.png[Configuration] *Configuration*, then click image:1848.png[Green_Plus_Sign] *Add a New Catalog Item*. The *Adding a new Service Catalog Item* window is displayed.
++
 image:7146.png[Adding_a_new_Service_Catalog_Item]
-. Choose *Orchestration* from *Catalog Item Type*.
-. In *Basic Info*, add *Name* and *Description*. Select the *Display* in *Catalog box*.
++
+. Select *Orchestration* from the *Catalog Item Type* list.
++
 image:7147.png[Basic_Info]
-. Select the *Catalog*, *Dialog*, and *Orchestration Template* from their respective list.
-. Select *Provisioning Entry Point*. The default is 
 +
-------
-/Cloud/Orchestration/Provisioning/StateMachines/Provision/default.
-------
-+
+. Enter the basic details in the *Basic Info*:
+.. Enter a *Name* and *Description* for the new service catalog item. 
+.. Select *Display in Catalog* box.
+.. Select the appropriate catalog from the *Catalog* list.
+.. Select the appropriate dialog from the *Dialog* list.
+.. Select the *Orchestration Template* from the list.
 . Click *Add*.
 
 [[ordering-service]]
 === Ordering Service
 
-Use this procedure to order a service catalog item using the dashboard UI.
+Complete the following procedure to order your service catalog item.
 
-[arabic]
 . Navigate to menu:Services[Catalogs] and select *Service Catalogs* in the accordion menu. From *All Services* catalogs, select the *catalog item* that you want to order. The *Service* window with the name and description of the service to be ordered is displayed.
 image:7172.png[Service_Catalog]
 . Click *Order*. The *Order Service* window with *Options* and *Parameter* is displayed.
@@ -63,14 +69,14 @@ image:7173.png[Order_Service]
 +
 [NOTE]
 ====
-The number of seconds get converted (rounded) to minutes when ordering the provision through Red Hat Enterprise Linus OpenStack Platform. For example, 100 seconds rounds to two minutes.
+The number of seconds get converted (rounded) to minutes when ordering the provision through Red Hat OpenStack Platform. For example, 100 seconds rounds to two minutes.
 ====
 +
 . You can use the default parameter values from the template, or enter new values as appropriate. 
 +
 [NOTE]
 ====
-The Parameters vary per dialog; therefore, the parameters shown in the *Order Service* window may or may not exist depending on the dialog.
+The parameters vary per dialog; therefore, the parameters shown in the *Order Service* window may or may not exist depending on the dialog.
 ====
 +
 . Click *Submit*.
@@ -81,7 +87,7 @@ The order request is submitted. After a request has been approved, the various s
 === Orchestration Stacks
 
 After ordering a service, you can see the progress state of the provisioning process in menu:Services[Requests].
-[arabic]
+
 . Initially, the *Request State* shows *Pending* with its *Approval State* as *Pending Approval*.
 image:7177.png[Requests]
 . After the request is *Approved*, the various stages of fulfillment are executed, and reflect accordingly under *Request State*.
@@ -93,8 +99,5 @@ image:7180.png[Catalog_Item_State]
 image:7181.png[Stack_Summary]
 
 You have now deployed instances and its associated collection of resources (called a stack) using an orchestration template.
-
-
-
 
 
