More edits to the example in appendix.

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -390,9 +390,9 @@ The parameters are passed to the children based on the method tied to the choice
 === Orchestration Stacks
 
 Cloud Orchestration is a service that allows you to create, update, and manage cloud resources and their software components as a single unit and then deploy them in an automated, repeatable way through a template.
-Templates use a human-readable syntax and can be defined in text files, thereby allowing users to check them into version control. Templates allow you to easily deploy and re-configure infrastructure for applications within your cloud. A user can author the stack templates, or can upload them from other sources.
+Templates use a human-readable syntax and can be defined in text files, thereby allowing users to check them into version control. Templates allow you to easily deploy and reconfigure infrastructure for applications within your cloud. A user can author the stack templates, or can upload them from other sources.
 
-{product-title} supports adding AWS CloudFormation, OpenStack Heat, Microsoft Azure, VNF, and VMWare vApp template type, and provides the ability to:
+{product-title} supports adding Amazon CloudFormation, OpenStack Heat, Microsoft Azure, VNF, and VMWare vApp template type, and provides the ability to:
 
 * Inventory stacks and elements of each type into the {product-title_short} VMDB.
 * Model the relationships of instances to their stacks, inclusive of the user interface. For example, selecting an instance within a region that is within a stack, the user interface shows this on the standard instance view.
@@ -404,17 +404,17 @@ Templates use a human-readable syntax and can be defined in text files, thereby 
 When importing a template into {product-title_short}, the selected elements are converted according to their type. For example, lists convert to list boxes, and single items convert to text boxes.
 ====
 
-[[adding-a-new-orchestration-template]]
-==== Adding a New Orchestration Template
+[[adding-orchestration-template]]
+==== Creating an Orchestration Template
 
-Complete the following procedure to add new orchestration templates.
+Complete the following procedure to add an orchestration template.
 
 . Navigate to menu:Services[Catalogs] and select *Orchestration Templates* in the accordion menu.
 . Click image:1847.png[Configuration] *Configuration*, then click image:1848.png[Green_Plus_Sign] *Create a new Orchestration Template*. The *Adding a new Orchestration Template* window is displayed.
 image:7148.png[Adding_a_new_Orchestration_Template]
-. In *Name*, enter a name for the new template.
-. In *Description*, enter a description for the template. Select Amazon CloudFormation or OpenStack Heat from the *Template Type* list. The default is Amazon CloudFormation.
-. You can select the *Draft box* to create a draft template.
+. Enter a *Name* and *Description* for your template.
+. Select the template type from the *Template Type* list. The default is Amazon CloudFormation.
+. Select *Draft* to create a draft template.
 . Add your template in the area below for the selected *Template Type*.
 . Click *Add*.
 
