section title edit

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/cloudformation_provisioning_via_services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/cloudformation_provisioning_via_services.adoc
@@ -20,8 +20,8 @@ Complete the following procedure to add new orchestration templates.
 
 You can add this template as a catalog item to a service catalog. Stacks can then be created from templates and launched from the service catalog.
 
-[[ex-adding-service-dialog]]
-=== Creating a Service Dialog
+[[ex-adding-service-dialog-from-orchestration-template]]
+=== Creating a Service Dialog from an Orchestration Template
 
 Complete the following procedure to create a service dialog based on the input parameters defined in the orchestration template.
 
